Much more complete MP4 manange using native lib MP4v2